# genaicode

./: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt  setup.sh  textbook_rag.py
